# AmaEngine

./: .gitignore  CMakeLists.txt  build_debug.bat  build_release.bat  conanfile.txt
.github/workflows/: clang-format-cheker.yml  linux-build.yml  linux-test-runner.yml  windows-build.yml
Automation/: automation.py  build.bat  build_sample_script.py
Automation/CMAKE/: CMakeHelpers.cmake
Source/: main.cpp
Source/ChuckNorrisJokes/: CMakeLists.txt  main.cpp
Source/DoodleJumpGame/: CMakeLists.txt  DoodleJump.cpp  DoodleJump.h  PlatformMananger.cpp  PlatformMananger.h  Player.cpp  Player.h  main.cpp  pch.h
Source/DoodleJumpGame/Tests/: main.cpp
Source/FightClubGame/: CMakeLists.txt
Source/FightClubGame/Game/: Character.cpp  Character.h  Weapon.cpp
Source/FightClubGame/Tests/: main.cpp
Source/Game/: Character.h  Weapon.h
Source/RaylibTetris/: CMakeLists.txt  main.cpp
Source/Tests/: main.cpp
Source/Utils/: CMakeLists.txt  Math.cpp  Math.h
conanProfiles/: linuxDebug
